<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pizza.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="87dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="54dp"
        android:text="@string/title_activity_main"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="322dp"
        android:layout_height="572dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:onClick="showSpecialtyPizzaScreen"
            android:text="@string/title_activity_specialty_pizza" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:onClick="showBuildYourOwnScreen"
            android:text="@string/title_activity_build_your_own_screen" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:onClick="showCurrentOrderScreen"
            android:text="@string/title_activity_current_order_screen" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:onClick="showStoreOrderScreen"
            android:text="@string/title_activity_store_order_screen" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>